Fixed Searchbar Alignment

--- a/css/main.source.css
+++ b/css/main.source.css
@@ -1753,7 +1753,7 @@ div.control-group .shortcut-recorder input[type=text]:focus {border-radius: 0px 
 
 /* HeaderBar Fix for bd-minimal */
 .bd-minimal .title-3qD0b- .flex-1xMQg5 .search-l1Wz-Q {
-	left: 205px;
+	left: 225px;
 }
 
 /* Home Button fix for bd-minimal */
